Solicitud de cuenta a api

--- a/Proyecto UI/src/pages/index.astro
+++ b/Proyecto UI/src/pages/index.astro
@@ -5,7 +5,7 @@ import Micomponente from '../components/contador';
 
 <Layout title="Contador de clientes.">
 	<main class="h-full w-full flex justify-center items-center">
-	<Micomponente></Micomponente>
+	<Micomponente client:load></Micomponente>
 	</main>
 </Layout>
 
