--- a/Proyecto UI/src/pages/buscar.astro
+++ b/Proyecto UI/src/pages/buscar.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/header.astro';
 ---
 
-<Layout title="Buscar IP">
+<Layout title="Información IP">
 	<main>
 		<Header/>
 	</main>
