--- a/Proyecto UI/src/components/header.astro
+++ b/Proyecto UI/src/components/header.astro
@@ -43,7 +43,7 @@ import Headerbutton from "./headerbutton.astro";
             </svg>
             Números aleatorios
         </Headerbutton>
-        <Headerbutton class="text-white" href="/buscar">
+        <Headerbutton class="text-white" href="/info">
             <svg
                 slot="before"
                 width="44"
