--- a/Proyecto UI/src/pages/index.astro
+++ b/Proyecto UI/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Header from '../components/header.astro';
 ---
 
-<Layout title="Página principal">
+<Layout title="Página principal.">
 	<main>
 		<Header/>
 		<div class="mx-auto text-center mb-8 lg:mb-16">
