--- a/Proyecto UI/src/pages/conversor.astro
+++ b/Proyecto UI/src/pages/conversor.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Header from "../components/header.astro";
+import Convierte from "../components/convierte";
 ---
 
 <Layout title="Conversor de números.">
 	<Header />
+    <main class="w-full flex justify-center items-center">
+		<Convierte client:load></Convierte>
+	</main>
 </Layout>
